<resources>
    <string name="app_name">HealthNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_select_image">Select Image Action</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="select_image_selection">Select Image Selection</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="image_splashscreen">image SplashScreen</string>
    <string name="login">LOGIN</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="klik_disini">Klik Disini</string>
    <string name="logo_login">Logo Login</string>
    <string name="email">Email</string>
    <string name="contoh_image">Contoh Image</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="jurusan">Jurusan</string>
    <string name="register">Register</string>
    <string name="no_hp">No Hp</string>
    <string name="nik">NIK</string>
    <string name="alamat_domisili">Alamat Domisili</string>
    <string name="image_register">image register</string>
    <string name="image_input">Image Input</string>
    <string name="add_image">Add Image</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="content_news">Content News</string>
    <string name="image_news">Image News</string>
    <string name="logout">Logout</string>
    <string name="tombol_tambah_data">tombol_tambah_data</string>
    <string name="submit_news">Submit News</string>
    <string name="button_delete">button delete</string>
</resources>