<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/img_logo_login"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/clip_login"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_login" />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_entry_login"
        android:layout_below="@id/img_logo_login"
        android:layout_marginTop="36dp"
        android:layout_centerInParent="true"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/et_login_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_entry_login"
        android:layout_below="@id/et_login_email"
        android:layout_centerInParent="true"
        android:layout_marginTop="18dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_login_Password"
        android:layout_marginTop="18dp"
        android:background="@drawable/backgorund_button"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/txt_ask_got_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_margin="12sp"
        android:text="@string/belum_punya_akun"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txt_link_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_ask_got_account"
        android:layout_marginLeft="12sp"
        android:layout_marginRight="12sp"
        android:text="@string/klik_disini"
        android:textColor="@color/purple_700"
        android:gravity="center"/>
    <ProgressBar
        android:id="@+id/progress_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_link_to_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:visibility="gone"/>

</RelativeLayout>