<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.RegisterActivity">

    <ImageView
        android:id="@+id/image_Register"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_register"
        android:src="@drawable/ic_register"/>

    <EditText
        android:id="@+id/et_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_entry_login"
        android:layout_below="@id/image_Register"
        android:layout_marginTop="36dp"
        android:layout_centerInParent="true"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"/>

    <EditText
        android:id="@+id/et_register_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_entry_login"
        android:layout_below="@id/et_register_username"
        android:layout_centerInParent="true"
        android:layout_marginTop="18dp"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/et_register_alamat_domisili"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_entry_login"
        android:layout_below="@id/et_register_Password"
        android:layout_centerInParent="true"
        android:layout_marginTop="18dp"
        android:hint="@string/jurusan"
        android:inputType="text"/>

    <EditText
        android:id="@+id/et_register_noHp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_entry_login"
        android:layout_below="@id/et_register_alamat_domisili"
        android:layout_centerInParent="true"
        android:layout_marginTop="18dp"
        android:hint="@string/alamat_domisili"
        android:inputType="number"/>

    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_entry_login"
        android:layout_below="@id/et_register_noHp"
        android:layout_centerInParent="true"
        android:layout_marginTop="18dp"
        android:hint="Email"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_register_email"
        android:layout_marginTop="18dp"
        android:background="@drawable/backgorund_button"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <ProgressBar
        android:id="@+id/progress_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:visibility="gone"/>

</RelativeLayout>