<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.AddUpdateDataActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/fl_select_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_marginBottom="28dp">

                    <ImageView
                        android:id="@+id/iv_dish_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/placeholder_2"
                        android:background="@color/dish_image_background"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/image_news" />

                    <ImageView
                        android:id="@+id/iv_add_dish_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|bottom"
                        android:contentDescription="@string/add_image"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:padding="@dimen/_16sdp"
                        android:src="@drawable/ic_add_a_photo" />
                </FrameLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/title"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:hintTextColor="@color/light_grey_700">

                    <EditText
                        android:id="@+id/etTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textColor="@color/dark_grey_900"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/author"
                    android:layout_margin="4dp"
                    app:hintTextColor="@color/light_grey_700"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <EditText
                        android:id="@+id/etAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/dark_grey_900"
                        android:importantForAutofill="no"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_content_news"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/content_news"
                    android:layout_margin="4dp"
                    app:hintTextColor="@color/light_grey_700"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <EditText
                        android:id="@+id/etContent_news"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_grey_900"
                        android:importantForAutofill="no"
                        tools:ignore="LabelFor"
                        android:inputType="textMultiLine"
                        android:minLines="8"
                        android:textSize="14sp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@android:color/holo_green_light"
                    android:text="Save News"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>
            </LinearLayout>

        </ScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>